# mycelix-v6-living

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INTEGRATION.md  README.md  RELEASING.md  STATUS_REPORT.md  cliff.toml  docker-compose.yml  flake.nix  foundry.toml  happ.yaml  mutants.toml  release.toml
.github/workflows/: ci.yml  formal-verification.yml  fuzzing.yml  publish.yml  release.yml
admin/: README.md  build.sh  index.html  package.json  tailwind.config.js  vite.config.ts
admin/src/: App.tsx
admin/src/api/: client.ts
admin/src/components/: Badge.tsx  Button.tsx  Card.tsx  Chart.tsx  Table.tsx  index.ts
admin/src/hooks/: useApi.ts
admin/src/pages/: Connections.tsx  CycleControl.tsx  Dashboard.tsx  History.tsx  Metrics.tsx  Settings.tsx
benches/: cycle_engine.rs  ws_server.rs
contracts/: FractalDAO.sol  KenosisBurn.sol  WoundEscrow.sol
contracts/libraries/: Errors.sol
crates/consciousness/: Cargo.toml  README.md
crates/consciousness/src/: collective_dreaming.rs  emergent_personhood.rs  field_interference.rs  lib.rs  proptest_kvector.rs  temporal_k_vector.rs
crates/cycle-engine/: Cargo.toml  README.md
crates/cycle-engine/src/: chaos.rs  engine.rs  fuzz.rs  lib.rs  middleware.rs  phase_handlers.rs  plugin.rs  scheduler.rs  telemetry.rs
crates/cycle-engine/tests/: e2e_cycle_simulation.rs
crates/epistemics/: Cargo.toml  README.md
crates/epistemics/src/: beauty_validity.rs  lib.rs  negative_capability.rs  proptest_beauty.rs  shadow_integration.rs  silence_signal.rs
crates/living-core/: Cargo.toml  README.md
crates/living-core/src/: config.rs  error.rs  events.rs  k_vector.rs  lib.rs  traits.rs  types.rs
crates/metabolism/: Cargo.toml  README.md
crates/metabolism/src/: composting.rs  kenosis.rs  lib.rs  metabolic_trust.rs  proptest_wound.rs  wound_healing.rs
crates/relational/: Cargo.toml  README.md
crates/relational/src/: entangled_pairs.rs  eros_attractor.rs  inter_species.rs  lib.rs  liminality.rs
crates/structural/: Cargo.toml  README.md
crates/structural/src/: fractal_governance.rs  lib.rs  morphogenetic.rs  mycelial_computation.rs  resonance_addressing.rs  time_crystal.rs
crates/ws-server/: Cargo.toml  README.md
crates/ws-server/src/: admin.rs  auth.rs  graphql.rs  lib.rs  main.rs  persistence.rs  rate_limit.rs  repository.rs  rest.rs  rpc.rs  server.rs  sse.rs  telemetry.rs  webhooks.rs
crates/ws-server/tests/: e2e.rs
deploy/: otel-collector.yaml
deploy/grafana/: dashboard.json
deploy/helm/mycelix-ws-server/: Chart.yaml  values.yaml
deploy/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
deploy/prometheus/: alerts.yaml
dna/: dna.yaml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  GRAPHQL.md  PERSISTENCE.md  PLUGINS.md  TLS.md
docs-site/: docusaurus.config.js  package.json  sidebars.js  tsconfig.json
docs-site/.github/workflows/: docs.yml
docs-site/docs/: contributing.md  installation.md  intro.md  quick-start.md
docs-site/docs/api/: graphql.md  rest.md  websocket.md
docs-site/docs/concepts/: cycle.md  phases.md  primitives.md
docs-site/docs/sdks/: go.md  python.md  typescript.md
docs-site/docs/server/: configuration.md  deployment.md  security.md
docs-site/src/css/: custom.css
docs-site/src/pages/: index.module.css  index.tsx
docs-site/static/: openapi.yaml
examples/: README.md
examples/cli/: README.md  package.json
examples/cli/src/: index.ts
examples/dashboard/: README.md  index.html  package.json  vite.config.ts
examples/dashboard/src/: App.tsx
examples/simple-dapp/: README.md  package.json
examples/simple-dapp/src/: index.ts
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: beauty_scoring.rs  cycle_state.rs  event_serialize.rs  kvector_operations.rs  rpc_parse.rs  wound_healing.rs
migrations/: 001_initial.sql  001_initial_pg.sql
monitoring/: grafana-dashboard.json  prometheus-rules.yml
plugins/logging/: Cargo.toml  plugin.toml
plugins/logging/src/: lib.rs
plugins/metrics-export/: Cargo.toml  plugin.toml
plugins/metrics-export/src/: lib.rs
plugins/notification/: Cargo.toml  plugin.toml
plugins/notification/src/: lib.rs
scripts/: MIGRATION.md  migrate-v52-to-v60.ts  mycelix-cli.sh  release.sh
sdk/go/: README.md  client.go  client_test.go  go.mod  subscription.go  types.go
sdk/kotlin/: README.md  build.gradle.kts  settings.gradle.kts
sdk/python/: README.md  pyproject.toml
sdk/python/src/mycelix/: __init__.py  client.py  subscription.py  types.py
sdk/python/tests/: test_client.py
sdk/react-native/: README.md  package.json  tsconfig.json
sdk/react-native/src/: client.ts  index.ts  types.ts
sdk/swift/: Package.swift  README.md
sdk/typescript/: jest.config.ts  package-lock.json  package.json
sdk/typescript/src/: client.ts  consciousness.ts  cycle.ts  epistemics.ts  index.ts  metabolism.ts  relational.ts  structural.ts  subscription.ts  transport.ts  types.ts
sdk/typescript/tests/: cycle.test.ts  integration.test.ts  metabolism.test.ts  setup.ts  subscription.test.ts  transport.test.ts
test/: FractalDAO.t.sol  KenosisBurn.t.sol  WoundEscrow.t.sol
test/gas/: GasBenchmarks.t.sol
test/halmos/: FractalDAO.t.sol  KenosisBurn.t.sol  WoundEscrow.t.sol
tests/chaos/: cycle_engine_chaos.rs  mod.rs
tests/e2e/: test_full_simulation.rs
tests/fuzz/: fuzz_targets.rs
tests/integration/: test_metabolism_cycle.rs
tests/load/: README.md
tests/load/k6/: README.md  config.js  connection_churn.js  rpc_throughput.js  websocket_load.js
tests/multinode/: concurrency.rs  consistency.rs  mod.rs  partition.rs
tests/soak/: README.md  analyze_soak.py  soak_test.sh
tests/unit/: test_invariants.rs
zomes/living-consciousness/integrity/: Cargo.toml
zomes/living-consciousness/integrity/src/: lib.rs
zomes/living-epistemics/coordinator/: Cargo.toml
zomes/living-epistemics/coordinator/src/: lib.rs
zomes/living-structural/coordinator/: Cargo.toml
zomes/living-structural/coordinator/src/: lib.rs
zomes/shared/: Cargo.toml
zomes/shared/src/: lib.rs
(+44 files in other folders)
