[workspace]
resolver = "2"
members = [
    "crates/living-core",
    "crates/metabolism",
    "crates/consciousness",
    "crates/epistemics",
    "crates/relational",
    "crates/structural",
    "crates/cycle-engine",
    "crates/ws-server",
]

[workspace.package]
version = "0.6.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/mycelix/mycelix-v6-living"
homepage = "https://mycelix.io"
documentation = "https://docs.mycelix.io"
authors = ["Mycelix Contributors"]
keywords = ["mycelix", "living-protocol", "bioregional", "holochain", "metabolism"]
categories = ["algorithms", "development-tools", "network-programming"]
rust-version = "1.75"

[workspace.dependencies]
# Internal crates
living-core = { path = "crates/living-core" }
metabolism = { path = "crates/metabolism" }
consciousness = { path = "crates/consciousness" }
epistemics = { path = "crates/epistemics" }
relational = { path = "crates/relational" }
structural = { path = "crates/structural" }
cycle-engine = { path = "crates/cycle-engine" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Cryptography
ed25519-dalek = "2.1"
sha2 = "0.10"
blake3 = "1.5"

# Math / linear algebra
nalgebra = "0.33"
nalgebra-sparse = "0.10"

# Randomness
rand = "0.8"
rand_distr = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Testing
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Holochain (for zome compilation — requires holonix/nix develop)
hdk = "0.6.0"
hdi = "0.7.0"
holochain_integrity_types = "0.6.0"
holochain_serialized_bytes = "0.0.56"
holo_hash = { version = "0.6", features = ["hashing"] }
getrandom = { version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true

# Benchmark profile - optimized but with debug info
[profile.bench]
opt-level = 3
debug = true
lto = false

# ============================================================================
# Root package for benchmarks
# ============================================================================
[package]
name = "mycelix-benchmarks"
version = "0.6.0"
edition = "2021"
publish = false

# Benchmarks require criterion harness
[[bench]]
name = "cycle_engine"
harness = false

[[bench]]
name = "ws_server"
harness = false

[dependencies]
# Internal crates for benchmarks
living-core = { path = "crates/living-core" }
metabolism = { path = "crates/metabolism" }
epistemics = { path = "crates/epistemics" }
relational = { path = "crates/relational" }
cycle-engine = { path = "crates/cycle-engine" }

# Benchmark dependencies
criterion = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
