[package]
name = "epistemics"
description = "Epistemic Deepening: Shadow Integration, Negative Capability, Silence as Signal, Beauty as Validity"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
living-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
