[package]
name = "living-core"
description = "Shared types and events for Mycelix v6.0 Living Protocol Layer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
readme = "README.md"
publish = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
