[package]
name = "structural"
description = "Structural Emergence: Resonance Addressing, Fractal Governance, Morphogenetic Fields, Time-Crystal Consensus, Mycelial Computation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
readme = "README.md"
publish = true

[dependencies]
living-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
