[package]
name = "ws-server"
description = "WebSocket RPC server for Mycelix Living Protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "mycelix-ws-server"
path = "src/main.rs"

[dependencies]
# Internal crates
living-core = { workspace = true }
cycle-engine = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Time
chrono = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"

# For integration tests
[[test]]
name = "e2e"
path = "tests/e2e.rs"
