[package]
name = "ws-server"
description = "WebSocket RPC server for Mycelix Living Protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
otlp = ["opentelemetry-otlp", "opentelemetry_sdk/rt-tokio"]
# Enable JWT authentication support
jwt = ["dep:jsonwebtoken"]

[[bin]]
name = "mycelix-ws-server"
path = "src/main.rs"

[dependencies]
# Internal crates
living-core = { workspace = true }
cycle-engine = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Time
chrono = { workspace = true }

# Logging and Tracing
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.27"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["trace"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic"], optional = true }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# JWT authentication (optional)
jsonwebtoken = { version = "9.3", optional = true }

[dev-dependencies]
tokio-test = "0.4"

# For integration tests
[[test]]
name = "e2e"
path = "tests/e2e.rs"
