[workspace]

[package]
name = "mycelix_shared"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "mycelix_shared"

[dependencies]
hdk = "0.6.0"
hdi = "0.7.0"
holo_hash = { version = "0.6", features = ["hashing"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
