[package]
name = "living_consciousness_integrity"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { workspace = true }
holochain_serialized_bytes = { workspace = true }
hdi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
mycelix_shared = { path = "../../shared" }
