[workspace]

[package]
name = "living_consciousness_integrity"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
holochain_serialized_bytes = "0.0.56"
hdi = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mycelix_shared = { path = "../../shared" }
