[workspace]

[package]
name = "living_structural"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
holochain_serialized_bytes = "0.0.56"
hdk = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
living_structural_integrity = { path = "../integrity" }
mycelix_shared = { path = "../../shared" }
